Scrubber: Ensure Mulligan M does not overlap

--- a/less/scrubber.less
+++ b/less/scrubber.less
@@ -89,6 +89,7 @@
 	&.mulligan {
 		padding-top: (@scrubber-turn-padding-top + (@scrubber-active-border-width - @scrubber-inactive-border-width));
 		padding-left: @scrubber-mulligan-padding-left;
+		overflow: hidden;
 	}
 
 	&.top {
